# BE/controllers/userController.js
@@ -22,7 +22,6 @@ const {
   validateLevel,
   validateType,
   validateProgress,
-  getCourseOrder,
 } = require('../utils/courseValidator')
 
 const { uploadImage } = require('../utils/imagekitUploader')
@@ -344,7 +343,7 @@ const getMyCourses = async (req, res, next) => {
     const { user } = req
 
     const {
-      search, category, level, type, sortBy, progress,
+      search, category, level, type, progress,
     } = req.query
     const where = {}
 
@@ -353,8 +352,6 @@ const getMyCourses = async (req, res, next) => {
         [Op.iLike]: `%${search}%`,
       }
     }
-
-    const courseOrder = getCourseOrder(sortBy, next)
 
     if (category) {
       validateCategory(category, next)
@@ -387,6 +384,7 @@ const getMyCourses = async (req, res, next) => {
       where: {
         userId: user.id,
         isAccessible: true,
+        isFollowing: true,
         progress: progress || { [Op.ne]: null },
       },
       include: [
@@ -400,9 +398,9 @@ const getMyCourses = async (req, res, next) => {
               as: 'category',
             },
           ],
-          order: [courseOrder.length === 0 ? ['id', 'ASC'] : courseOrder],
         },
       ],
+      order: [['lastSeen', 'DESC']],
     })
 
     if (!course || course.length === 0) {
@@ -461,6 +459,7 @@ const openCourse = async (req, res, next) => {
       userId: user.id,
       courseId,
       isAccessible: course.type === 'gratis',
+      isFollowing: false,
       progress: 'inProgress',
       progressPercentage: 0,
       lastSeen: new Date(),
@@ -531,6 +530,58 @@ const openCourse = async (req, res, next) => {
   }
 }
 
+const followCourse = async (req, res, next) => {
+  try {
+    const { user } = req
+    const { courseId } = req.params
+
+    if (!courseId) {
+      return next(new ApiError('courseId harus diisi', 400))
+    }
+
+    const course = await Course.findByPk(courseId)
+
+    if (!course) {
+      return next(new ApiError('Course tidak ditemukan', 404))
+    }
+
+    const userCourse = await UserCourse.findOne({
+      where: {
+        userId: user.id,
+        courseId,
+      },
+    })
+
+    if (!userCourse) {
+      return next(new ApiError('User Course tidak ditemukan', 404))
+    }
+
+    if (!userCourse.isAccessible) {
+      return next(
+        new ApiError(
+          'Course ini adalah course premium, silahkan beli course premium terlebih dahulu',
+          400,
+        ),
+      )
+    }
+
+    if (userCourse.isFollowing) {
+      return next(new ApiError('Anda sudah mengikuti course ini', 400))
+    }
+
+    await userCourse.update({
+      isFollowing: true,
+    })
+
+    return res.status(200).json({
+      status: 'Success',
+      message: 'Berhasil mengikuti course',
+    })
+  } catch (error) {
+    return next(new ApiError(error.message, 500))
+  }
+}
+
 const openUserModule = async (req, res, next) => {
   try {
     const { user } = req
@@ -594,6 +645,9 @@ const openUserModule = async (req, res, next) => {
           ),
         )
       }
+      if (!userCourse.isFollowing) {
+        return next(new ApiError('Anda belum mengikuti course ini', 403))
+      }
       return next(
         new ApiError(
           'Module ini masih terkunci, selesaikan module yang sebelumnya dulu',
@@ -602,7 +656,11 @@ const openUserModule = async (req, res, next) => {
       )
     }
 
-    if (userModule.status === 'terbuka' && userCourse.isAccessible === true) {
+    if (
+      userModule.status === 'terbuka'
+      && userCourse.isAccessible === true
+      && userCourse.isFollowing === true
+    ) {
       const nextUserModule = mergedUserModules[indexUserModule + 1]
       if (nextUserModule) {
         await nextUserModule.update({
@@ -643,7 +701,7 @@ const openUserModule = async (req, res, next) => {
   }
 }
 
-const userTransaction = async (req, res, next) => {
+const getAllUserTransaction = async (req, res, next) => {
   try {
     const { user } = req
 
@@ -654,6 +712,12 @@ const userTransaction = async (req, res, next) => {
       include: [
         {
           model: Course,
+          include: [
+            {
+              model: Category,
+              as: 'category',
+            },
+          ],
         },
       ],
       order: [['createdAt', 'DESC']],
@@ -675,7 +739,7 @@ const userTransaction = async (req, res, next) => {
   }
 }
 
-const openUserTransaction = async (req, res, next) => {
+const getUserTransactionById = async (req, res, next) => {
   try {
     const { user } = req
     const { transactionId } = req.params
@@ -684,6 +748,12 @@ const openUserTransaction = async (req, res, next) => {
       include: [
         {
           model: Course,
+          include: [
+            {
+              model: Category,
+              as: 'category',
+            },
+          ],
         },
       ],
       order: [['createdAt', 'DESC']],
@@ -723,7 +793,8 @@ module.exports = {
   changeMyPassword,
   getMyCourses,
   openCourse,
+  followCourse,
   openUserModule,
-  userTransaction,
-  openUserTransaction,
+  getAllUserTransaction,
+  getUserTransactionById,
 }
